# istio-k8s-operator

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  metadata.yaml  promtail.yaml  pyproject.toml  requirements.txt  tox.ini  wqe
.github/: .jira_sync_config.yaml
.github/workflows/: issues.yaml  pull-request.yaml  release.yaml
src/: charm.py  config.py  get_dashboards.sh  istioctl.py  kubernetes_resource_handler.py
src/grafana_dashboards/: Istio_Control_Plane_Dashboard_rev229.json  Istio_Mesh_Dashboard_rev229.json  Istio_Performance_Dashboard_rev229.json  Istio_Service_Dashboard_rev229.json  Istio_Wasm_Extension_Dashboard_rev186.json  Istio_Workload_Dashboard_rev229.json  Istio_Ztunnel_Dashboard_rev2.json  control-plane.json  mesh.json  performance.json  services.json  workloads.json  ztunnel.json
src/manifests/: control-plane.yaml  crds.yaml  gateway-apis.yaml
src/prometheus_alert_rules/: infra.rules  workloads.rules
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/tests/examples/: test-istio.tf
terraform/tests/integration/: main.tftest.hcl
terraform/tests/manual/: test-istio.tf
terraform/tests/plan/: main.tftest.hcl
tests/integration/: conftest.py  helpers.py  test_authorization_policies.py  test_charm.py  test_charm_scaling.py
tests/scenario/: conftest.py  test_charm.py  test_extension_providers.py  test_istio_info_relation.py  test_istio_metadata_implementation.py  test_istio_metadata_lib.py  test_tracing.py
tests/unit/: conftest.py  test_ca_cert.py  test_charm.py  test_charm_harness.py  test_extension_providers.py  test_istio_metadata_lib.py  test_istioctl.py  test_status.py
(+13 files in other folders)
