# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "istio-k8s"
version = "0.0"
requires-python = "~=3.8"

dependencies = [
    "ops~=2.5",
    "pydantic>=2",
    "cosl",
    "opentelemetry-exporter-otlp-proto-http==1.21.0",
    "lightkube-extensions@git+https://github.com/canonical/lightkube-extensions.git@main",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "codespell",
    "pyright",
    "pytest",
    "coverage[toml]",
    "pytest-mock",
    "ops[testing]",
    "pytest",
    "pytest-asyncio==0.21.2",
    "juju",
    "pytest-operator",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py38"]

# Linting tools configuration
[tool.ruff]
line-length = 99

[tool.ruff.lint]
exclude = ["__pycache__", "*.egg_info"]
select = ["E", "W", "F", "C", "N", "R", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[toos.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
extraPaths = ["src", "lib"]
include = ["src/**.py"]
